IN-47 feat: sign in form ready for review, fix input styles with gap and width, fix button padding styles

--- a/shared/components/Input/Input.module.scss
+++ b/shared/components/Input/Input.module.scss
@@ -1,7 +1,7 @@
 .inputRoot {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  width: 100%;
 
   .inputDefault {
     width: 100%;
